refactor: restore notebooks and exclude formatting and linting of the notebooks folder.

--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -9,16 +9,21 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import time\n",
     "\n",
     "import dotenv\n",
+    "from IPython.display import HTML\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import requests\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "# EG1_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
     "EG1_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EG1_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
+    "EG1_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "ALBERT_API_URL_DEV = \"https://albert.api.dev.etalab.gouv.fr/v1\"\n",
@@ -49,68 +54,53 @@
     "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
-    "    \"dataset\": \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}},\n",
-    "    \"metrics\": metrics,\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
     "            \"aliased_name\": \"albert-large-semantic-qdrant\",\n",
-    "            \"extra_params\": {\n",
-    "                \"search\": True,\n",
-    "                \"search_args\": {\"method\": \"semantic\", \"collections\": [784, 785], \"k\": 10},\n",
-    "            },\n",
-    "            \"base_url\": ALBERT_API_URL,\n",
-    "            \"api_key\": ALBERT_API_KEY,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
     "            \"aliased_name\": \"albert-large-semantic-elastic\",\n",
-    "            \"extra_params\": {\n",
-    "                \"search\": True,\n",
-    "                \"search_args\": {\"method\": \"semantic\", \"collections\": [20, 21], \"k\": 10},\n",
-    "            },\n",
-    "            \"base_url\": ALBERT_API_URL_DEV,\n",
-    "            \"api_key\": ALBERT_API_KEY_DEV,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [20,21], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
     "            \"aliased_name\": \"albert-large-lexical-elastic\",\n",
-    "            \"extra_params\": {\n",
-    "                \"search\": True,\n",
-    "                \"search_args\": {\"method\": \"lexical\", \"collections\": [20, 21], \"k\": 10},\n",
-    "            },\n",
-    "            \"base_url\": ALBERT_API_URL_DEV,\n",
-    "            \"api_key\": ALBERT_API_KEY_DEV,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [20,21], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
     "            \"aliased_name\": \"albert-large-hybrid-elastic\",\n",
-    "            \"extra_params\": {\n",
-    "                \"search\": True,\n",
-    "                \"search_args\": {\"method\": \"hybrid\", \"collections\": [20, 21], \"k\": 10},\n",
-    "            },\n",
-    "            \"base_url\": ALBERT_API_URL_DEV,\n",
-    "            \"api_key\": ALBERT_API_KEY_DEV,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [20,21], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
     "    ],\n",
     "}\n",
     "\n",
     "\n",
+    "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
-    "    \"name\": expset_name,\n",
+    "    \"name\" : expset_name, \n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 5},\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
     "}\n",
-    "response = requests.post(f\"{EG1_API_URL}/experiment_set\", json=expset, headers=headers)\n",
+    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -133,34 +123,36 @@
     "# Patching the experiment set\n",
     "\n",
     "common_params = {\n",
-    "    \"dataset\": \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}},\n",
-    "    \"metrics\": metrics,\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
     "            \"aliased_name\": \"albert-large-dry-3.2\",\n",
-    "            \"base_url\": ALBERT_API_URL,\n",
-    "            \"api_key\": ALBERT_API_KEY,\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
     "            \"aliased_name\": \"albert-large-dry-3.1\",\n",
-    "            \"base_url\": ALBERT_API_URL_DEV,\n",
-    "            \"api_key\": ALBERT_API_KEY_DEV,\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
+    "\n",
     "    ],\n",
     "}\n",
     "\n",
-    "expset = {\"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 5}}\n",
-    "response = requests.patch(f\"{EG1_API_URL}/experiment_set/{expset_id}\", json=expset, headers=headers)\n",
+    "expset = {\n",
+    "\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
+    "}\n",
+    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f\"Patched expset: {resp['name']} ({resp['id']})\")\n",
+    "    print(f'Patched expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -176,9 +168,9 @@
     "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
-    "    \"dataset\": \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}},\n",
-    "    \"metrics\": metrics,\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
     "}"
    ]
@@ -201,39 +193,39 @@
     "# Patching the experiment set\n",
     "\n",
     "common_params = {\n",
-    "    \"dataset\": \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\": {\"temperature\": 0.2}},\n",
-    "    \"metrics\": metrics,\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
     "            \"aliased_name\": \"albert-large-hybrid-web-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"web_search\": True, \"k\": 10}},\n",
-    "            \"base_url\": ALBERT_API_URL_DEV,\n",
-    "            \"api_key\": ALBERT_API_KEY_DEV,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"web_search\": True, \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\",\n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
     "            \"aliased_name\": \"albert-large-semantic-web-qdrant\",\n",
-    "            \"extra_params\": {\n",
-    "                \"search\": True,\n",
-    "                \"search_args\": {\"method\": \"semantic\", \"web_search\": True, \"k\": 10},\n",
-    "            },\n",
-    "            \"base_url\": ALBERT_API_URL,\n",
-    "            \"api_key\": ALBERT_API_KEY,\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"web_search\": True, \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
+    "        \n",
+    "\n",
     "    ],\n",
     "}\n",
     "\n",
-    "expset = {\"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 5}}\n",
-    "response = requests.patch(f\"{EG1_API_URL}/experiment_set/{expset_id}\", json=expset, headers=headers)\n",
+    "expset = {\n",
+    "\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
+    "}\n",
+    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f\"Patched expset: {resp['name']} ({resp['id']})\")\n",
+    "    print(f'Patched expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
