--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -22,19 +22,21 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import time\n",
     "\n",
     "import dotenv\n",
+    "from IPython.display import HTML\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from IPython.display import HTML\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.etalab.gouv.fr/api/v1\"\n",
@@ -166,7 +168,7 @@
    ],
    "source": [
     "mfs_dataset = pd.read_csv(\"_data/evaluation_set_qo_qcm.csv\", delimiter=\";\")\n",
-    "mfs_dataset.rename(columns={\"true_answer\": \"output_true\"}, inplace=True)  # to be compliant with evalap\n",
+    "mfs_dataset.rename(columns={'true_answer': 'output_true'}, inplace=True) # to be compliant with evalap\n",
     "mfs_dataset.head()"
    ]
   },
@@ -208,13 +210,10 @@
    ],
    "source": [
     "# Publish a dataset\n",
-    "dataset = {\n",
-    "    \"name\": \"MFS_questions_v01\",\n",
-    "    \"readme\": \"MFS dataset with ground truth\",\n",
-    "    \"default_metric\": \"judge_notator\",\n",
-    "    \"df\": mfs_dataset.to_json(),\n",
-    "}\n",
-    "response = requests.post(f\"{EVALAP_API_URL}/dataset\", json=dataset, headers=headers)\n",
+    "dataset = {\"name\": \"MFS_questions_v01\", \"readme\": \"MFS dataset with ground truth\"\n",
+    "           , \"default_metric\" : \"judge_notator\"\n",
+    "           , \"df\": mfs_dataset.to_json()}\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset', json=dataset, headers=headers)\n",
     "resp = response.json()\n",
     "resp"
    ]
@@ -415,7 +414,7 @@
     "# Show available metrics\n",
     "# - the require fields should be an existing field to the dataset used with the metric.\n",
     "# - output metric can be generated from the query (see below)\n",
-    "response = requests.get(f\"{EVALAP_API_URL}/metrics\", headers=headers)\n",
+    "response = requests.get(f'{EVALAP_API_URL}/metrics', headers=headers)\n",
     "all_metrics = response.json()\n",
     "df = pd.DataFrame(all_metrics).sort_values(by=[\"type\", \"name\"])\n",
     "HTML(df.to_html(index=False))"
@@ -454,18 +453,16 @@
     "# Designing my experiments\n",
     "dataset = \"MFS_questions_v01\"\n",
     "models_to_test = [\n",
-    "    {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "    {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    {\n",
-    "        \"_name\": \"mfs-rag-baseline\",\n",
-    "        \"name\": \"AgentPublic/llama3-instruct-8b\",\n",
-    "        \"extra_params\": {\"rag\": {\"mode\": \"rag\", \"limit\": 7}},\n",
-    "        \"base_url\": MFS_API_URL,\n",
-    "        \"api_key\": MFS_API_KEY,\n",
-    "    },\n",
+    "      \"_name\": \"mfs-rag-baseline\",\n",
+    "      \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "      \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "    },    \n",
     "]\n",
-    "sampling_params = {\"temperature\": 0.2}  # use the same sampling params for all in this evalation\n",
+    "sampling_params = {\"temperature\": 0.2} # use the same sampling params for all in this evalation\n",
     "metrics = [\"output_length\", \"answer_relevancy\"]\n",
     "\n",
     "# Lauching the experiments\n",
@@ -476,16 +473,16 @@
     "    model = model.copy()\n",
     "    model.pop(\"_name\") if \"_name\" in model else None\n",
     "    experiment = {\n",
-    "        \"name\": f\"MFS_questions>{name}_{i}_v0\",\n",
+    "        \"name\" : f\"MFS_questions>{name}_{i}_v0\", \n",
     "        \"dataset\": dataset,\n",
     "        \"model\": model,\n",
     "        \"metrics\": metrics,\n",
     "    }\n",
-    "    response = requests.post(f\"{EVALAP_API_URL}/experiment\", json=experiment, headers=headers)\n",
+    "    response = requests.post(f'{EVALAP_API_URL}/experiment', json=experiment, headers=headers)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
     "        experiment_ids.append(resp[\"id\"])\n",
-    "        print(f\"Created experiment: {resp['name']} ({resp['id']}), status: {resp['experiment_status']}\")\n",
+    "        print(f'Created experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
     "        print(resp)"
    ]
@@ -516,10 +513,10 @@
     "        \"metrics\": [\"generation_time\"],\n",
     "        \"rerun_answers\": False,\n",
     "    }\n",
-    "    response = requests.patch(f\"{EVALAP_API_URL}/experiment/{exp_id}\", json=experiment, headers=headers)\n",
+    "    response = requests.patch(f'{EVALAP_API_URL}/experiment/{exp_id}', json=experiment, headers=headers)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
-    "        print(f\"Updated experiment: {resp['name']} ({resp['id']}), status: {resp['experiment_status']}\")\n",
+    "        print(f'Updated experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
     "    else:\n",
     "        print(resp)"
    ]
@@ -654,61 +651,43 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = []  # list of results per experiment/model\n",
-    "supports = []  # Store the support for debugging: if some answer/observation failed, the support can be less than the dataset size\n",
+    "df_all = [] # list of results per experiment/model\n",
+    "supports = [] # Store the support for debugging: if some answer/observation failed, the support can be less than the dataset size\n",
     "for model, exp_id in zip(models_to_test, experiment_ids):\n",
     "    # Get an experiment result\n",
-    "    response = requests.get(f\"{EVALAP_API_URL}/experiment/{exp_id}?with_results=true\", headers=headers)\n",
+    "    response = requests.get(f'{EVALAP_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
     "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
     "    results = experiment[\"results\"]\n",
-    "\n",
+    "    \n",
     "    # Build a result dataframe  from the observation_table (mean, std etc)\n",
     "    df_metrics = {}\n",
     "    metric_support = []\n",
     "    supports.append(metric_support)\n",
-    "    for metric_results in results:\n",
+    "    for metric_results in results: \n",
     "        metric_name = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
-    "        df = pd.DataFrame(\n",
-    "            [\n",
-    "                [\n",
-    "                    np.mean(arr),  # mean\n",
-    "                    np.std(arr),  # std\n",
-    "                    np.median(arr),  # median\n",
-    "                    f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n",
-    "                    len(arr),  # support\n",
-    "                ]\n",
-    "            ],\n",
-    "            columns=[\"mean\", \"std\", \"median\", \"mean_std\", \"support\"],\n",
-    "        )\n",
+    "        df = pd.DataFrame([[\n",
+    "                np.mean(arr), # mean\n",
+    "                np.std(arr), # std\n",
+    "                np.median(arr), # median\n",
+    "                f\"{arr.mean():.2f} ± {arr.std():.2f}\",  # Formatting as 'mean±std'\n",
+    "                len(arr), # support\n",
+    "            ]], columns=[\"mean\", \"std\", \"median\", \"mean_std\", \"support\"])\n",
     "        df_metrics[metric_name] = df\n",
     "        metric_support.append(len(arr))\n",
-    "\n",
+    "    \n",
     "    # Stack the mean_std final measure\n",
     "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
-    "    df = pd.DataFrame(\n",
-    "        {metric_name: df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name]\n",
-    "    )\n",
+    "    df = pd.DataFrame({metric_name:df[\"mean_std\"].iloc[0] for metric_name, df in sorted(df_metrics.items())}, index=[name])\n",
     "    df_all.append(df)\n",
     "\n",
     "final_df = pd.concat(df_all)\n",
-    "# final_df[\"support\"] = supports # for debugging\n",
+    "#final_df[\"support\"] = supports # for debugging\n",
     "# Reorder columns\n",
-    "final_df = final_df[\n",
-    "    [\n",
-    "        \"answer_relevancy\",\n",
-    "        \"judge_completude\",\n",
-    "        \"judge_exactness\",\n",
-    "        \"judge_notator\",\n",
-    "        \"output_length\",\n",
-    "        \"generation_time\",\n",
-    "        \"toxicity\",\n",
-    "        \"bias\",\n",
-    "    ]\n",
-    "]\n",
+    "final_df = final_df[['answer_relevancy', 'judge_completude', 'judge_exactness', 'judge_notator', 'output_length', 'generation_time', 'toxicity', 'bias']]\n",
     "final_df"
    ]
   },
@@ -747,12 +726,10 @@
     "# See what's inside an experiment result\n",
     "# --\n",
     "metric_index = 2\n",
-    "len(results)  # number of metrics\n",
-    "list(results[metric_index])  # the keys of the dict representing the result object\n",
-    "len(results[metric_index][\"observation_table\"])  # number of observation -> one per dataset line.\n",
-    "results[metric_index][\"observation_table\"][\n",
-    "    0\n",
-    "]  # the actual \"observation\" for one metric, for one line in the dataset."
+    "len(results) # number of metrics\n",
+    "list(results[metric_index]) # the keys of the dict representing the result object\n",
+    "len(results[metric_index][\"observation_table\"]) # number of observation -> one per dataset line.\n",
+    "results[metric_index][\"observation_table\"][0] # the actual \"observation\" for one metric, for one line in the dataset."
    ]
   }
  ],
