--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -17,22 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import concurrent.futures\n",
     "import os\n",
     "import sys\n",
+    "import time\n",
     "from io import StringIO\n",
+    "import concurrent.futures\n",
     "\n",
     "import dotenv\n",
+    "from IPython.display import HTML\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
     "from jinja2 import Template\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "OPENAI_URL = \"https://api.openai.com/v1\"\n",
@@ -55,7 +59,7 @@
     ")\n",
     "response.raise_for_status()\n",
     "dataset = response.json()\n",
-    "dataset_df = pd.read_json(StringIO(dataset[\"df\"]))"
+    "dataset_df =  pd.read_json(StringIO(dataset[\"df\"]))"
    ]
   },
   {
@@ -74,8 +78,8 @@
    ],
    "source": [
     "sys.path.append(\"../../mcp-servers/data-gouv-fr/\")\n",
-    "from clients.llm import LlmClient, split_think_answer\n",
-    "from clients.search import SearchEngineClient"
+    "from clients.search import SearchEngineClient\n",
+    "from clients.llm import LlmClient, split_think_answer"
    ]
   },
   {
@@ -105,7 +109,6 @@
     "{% endfor %}\n",
     "\"\"\")\n",
     "\n",
-    "\n",
     "# Augment a prompt with collection search\n",
     "def do_rag(query, limit=limit):\n",
     "    # Search relevant chunks\n",
@@ -120,13 +123,12 @@
     "    # Render prompt\n",
     "    return rag_prompt.render(query=query, chunks=hits, limit=limit)\n",
     "\n",
-    "\n",
     "# The LLM core generation\n",
     "def generate(model, prompt, use_system_prompt=True):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    if use_system_prompt:\n",
     "        messages = [{\"role\": \"system\", \"content\": system_prompt}] + messages\n",
-    "\n",
+    "        \n",
     "    aiclient = LlmClient()\n",
     "    result = aiclient.generate(model=model, messages=messages, **sampling_params)\n",
     "    observation = result.choices[0].message.content\n",
@@ -205,11 +207,7 @@
     "# --\n",
     "\n",
     "# The models to runs\n",
-    "models = [\n",
-    "    \"AgentPublic/llama3-instruct-guillaumetell\",\n",
-    "    \"meta-llama/Llama-3.1-8B-Instruct\",\n",
-    "    \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\",\n",
-    "]\n",
+    "models = [\"AgentPublic/llama3-instruct-guillaumetell\", \"meta-llama/Llama-3.1-8B-Instruct\", \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\"]\n",
     "\n",
     "# the input prompts to answer\n",
     "prompts = []\n",
@@ -290,7 +288,7 @@
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
