--- a/notebooks/create_marker_dataset.ipynb
+++ b/notebooks/create_marker_dataset.ipynb
@@ -2,32 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "afd82f64-6a10-4aeb-af51-69046db4ac88",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, sys, time, json, re, io\n",
     "import base64\n",
-    "import io\n",
-    "import json\n",
-    "import os\n",
-    "import re\n",
-    "import subprocess\n",
-    "import sys\n",
-    "\n",
     "import dotenv\n",
     "import requests\n",
+    "import subprocess\n",
+    "import pandas as pd\n",
     "from datasets import load_dataset\n",
-    "from IPython.display import display\n",
-    "from PIL import Image\n",
+    "\n",
+    "from IPython.display import display, HTML\n",
+    "from PIL import Image \n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from evalap.utils import log_and_raise_for_status  # noqa: E402\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "\n",
@@ -93,7 +90,7 @@
     }
    ],
    "source": [
-    "# What a row contains\n",
+    "# What a row contains \n",
     "\n",
     "for key, value in ds[\"train\"][1261].items():\n",
     "    print(key, type(value))"
@@ -135,7 +132,7 @@
     "def display_dataset_row(row):\n",
     "    \"\"\"\n",
     "    Display a dataset row nicely in a Jupyter notebook.\n",
-    "\n",
+    "    \n",
     "    Args:\n",
     "    - row: dictionary containing elements like 'gt_blocks', 'img', etc.\n",
     "    \"\"\"\n",
@@ -145,8 +142,8 @@
     "            display(value)\n",
     "        elif key == \"gt_blocks\":\n",
     "            blocks = json.loads(value)\n",
-    "            print(f\"{len(blocks)} blocks. Block types: {[x.get('block_type') for x in blocks]}\")\n",
-    "            # for block in blocks:\n",
+    "            print(f'{len(blocks)} blocks. Block types: {[x.get(\"block_type\") for x in blocks]}')\n",
+    "            #for block in blocks:\n",
     "            #    print(block[\"html\"])\n",
     "        elif isinstance(value, str):\n",
     "            print(f\"{key}: {value}\")\n",
@@ -159,7 +156,6 @@
     "        else:\n",
     "            print(f\"{key}: {type(value)} (unable to display)\")\n",
     "\n",
-    "\n",
     "def image_to_base64(pil_image):\n",
     "    \"\"\"\n",
     "    Convert a PIL image to a base64-encoded PNG bytes string.\n",
@@ -167,7 +163,6 @@
     "    with io.BytesIO() as buffer:\n",
     "        pil_image.save(buffer, format=\"PNG\")\n",
     "        return base64.b64encode(buffer.getvalue()).decode(\"utf-8\")\n",
-    "\n",
     "\n",
     "def extract_code(text: str):\n",
     "    \"\"\"Return the last code block found\"\"\"\n",
@@ -196,11 +191,11 @@
     "    \"\"\"\n",
     "    # Create a process that runs pandoc\n",
     "    process = subprocess.Popen(\n",
-    "        [\"pandoc\", \"-f\", input_format, \"-t\", output_format],\n",
+    "        ['pandoc', '-f', input_format, '-t', output_format],\n",
     "        stdin=subprocess.PIPE,\n",
     "        stdout=subprocess.PIPE,\n",
     "        stderr=subprocess.PIPE,\n",
-    "        text=True,\n",
+    "        text=True\n",
     "    )\n",
     "\n",
     "    # Send the HTML content to pandoc and get the output\n",
@@ -208,7 +203,7 @@
     "    if process.returncode != 0:\n",
     "        raise Exception(f\"Pandoc conversion failed: {error}\")\n",
     "\n",
-    "    return new_content"
+    "    return new_content\n"
    ]
   },
   {
@@ -254,18 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "34c76c88-da7e-4841-973b-585d1240a912",
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"\"\"You are tasked with generating a JSON representation from the analysis (OCR) of a given image.\n",
-    "Your goal is to create a JSON object that has the content of the image extracted in a structured format.\n",
+    "system_prompt = \"\"\"You are tasked with generating a JSON representation from the analysis (OCR) of a given image. \n",
+    "Your goal is to create a JSON object that has the content of the image extracted in a structured format. \n",
     "\n",
     "The JSON should be structured to represent the content of the image in a way that corresponds to standard markdown primitives. Here's how to approach this task:\n",
     "\n",
     "The JSON should contain a list of blocks, where each block represents a distinct element in the image, such as headers, paragraphs, or tables.\n",
-    "Here is a an exemple of the json schema wanted:\n",
+    "Here is a an exemple of the json schema wanted: \n",
     "\n",
     "Schema:\n",
     "```json\n",
@@ -344,11 +339,13 @@
     "payload = {\n",
     "    \"model\": model,\n",
     "    \"prompt\": system_prompt,\n",
-    "    # \"file\": \"data:image/png;base64,\" + image_to_base64(ds[\"train\"][0][\"img\"]),\n",
+    "    #\"file\": \"data:image/png;base64,\" + image_to_base64(ds[\"train\"][0][\"img\"]),\n",
     "}\n",
     "\n",
-    "ds[\"train\"][0][\"img\"].save(\"tmp-img-marker-0.pdf\", \"PDF\", resolution=300)\n",
-    "files = {\"file\": open(\"tmp-img-marker-0.pdf\", \"rb\")}\n",
+    "ds[\"train\"][0][\"img\"].save('tmp-img-marker-0.pdf', \"PDF\", resolution=300)\n",
+    "files = {\n",
+    "    'file': open(\"tmp-img-marker-0.pdf\", \"rb\")\n",
+    "}\n",
     "\n",
     "# Send the request\n",
     "response = requests.post(url, headers=albert_headers, data=payload, files=files)\n",
@@ -367,25 +364,32 @@
     "url = \"https://albert.api.etalab.gouv.fr/v1/chat/completions\"\n",
     "model = \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\"\n",
     "messages = [\n",
-    "    # {\n",
+    "    #{\n",
     "    #    \"role\": \"system\",\n",
     "    #    \"content\": \"system_prompt\n",
-    "    # },\n",
+    "    #},\n",
     "    {\n",
     "        \"role\": \"user\",\n",
     "        \"content\": [\n",
-    "            {\"type\": \"text\", \"text\": system_prompt},\n",
+    "            {\n",
+    "                \"type\": \"text\",\n",
+    "                \"text\": system_prompt\n",
+    "            },\n",
     "            {\n",
     "                \"type\": \"image_url\",\n",
     "                \"image_url\": {\n",
     "                    \"url\": \"data:image/png;base64,\" + image_to_base64(ds[\"train\"][0][\"img\"]),\n",
-    "                },\n",
-    "            },\n",
-    "        ],\n",
+    "                }\n",
+    "            }\n",
+    "        ]\n",
     "    }\n",
     "]\n",
     "\n",
-    "payload = {\"model\": model, \"messages\": messages, \"temperature\": 0.2}\n",
+    "payload = {\n",
+    "    \"model\": model,\n",
+    "    \"messages\": messages,\n",
+    "    \"temperature\": 0.2\n",
+    "}\n",
     "\n",
     "# Send the request\n",
     "response = requests.post(url, headers=albert_headers, json=payload)\n",
@@ -464,25 +468,21 @@
    "source": [
     "# Create the `json_output_true`\n",
     "\n",
-    "\n",
     "def create_json_output_true(row):\n",
     "    blocks = json.loads(row[\"gt_blocks\"])\n",
     "    v = []\n",
     "    texts = []\n",
     "    for block in blocks:\n",
     "        text = pandoc(block[\"html\"]).strip()\n",
-    "        v.append(\n",
-    "            {\n",
-    "                \"bbox\": block[\"bbox\"],\n",
-    "                \"polygon\": block[\"polygon\"],\n",
-    "                \"type\": block[\"block_type\"],\n",
-    "                \"text\": text,\n",
-    "            }\n",
-    "        )\n",
+    "        v.append({\n",
+    "            'bbox': block[\"bbox\"], \n",
+    "            'polygon': block[\"polygon\"], \n",
+    "            'type': block[\"block_type\"],\n",
+    "            'text': text,\n",
+    "        })\n",
     "        texts.append(text)\n",
     "    markdown = \"\\n\\n\".join(texts)\n",
     "    return {\"json_output_true\": v, \"markdown_true\": markdown}\n",
-    "\n",
     "\n",
     "ds[\"train\"] = ds[\"train\"].map(create_json_output_true)\n",
     "ds[\"train\"] = ds[\"train\"].remove_columns([\"gt_blocks\"])"
@@ -521,7 +521,7 @@
    ],
    "source": [
     "# Try to save the dataset as a parquet file (its around 700 Mo)\n",
-    "ds[\"train\"].to_parquet(\"dataset_test.parquet\", compression=\"gzip\")"
+    "ds[\"train\"].to_parquet(\"dataset_test.parquet\", compression=\"gzip\") "
    ]
   },
   {
@@ -746,14 +746,11 @@
    ],
    "source": [
     "# Create the dataset\n",
-    "dataset = {\n",
-    "    \"name\": \"OCR_marker_benchmark\",\n",
-    "    \"readme\": \"Marker benchmark. See https://github.com/VikParuchuri/marker\",\n",
-    "    \"default_metric\": \"ocr_v1\",\n",
-    "    \"df\": \"{}\",\n",
-    "}\n",
+    "dataset = {\"name\": \"OCR_marker_benchmark\", \"readme\": \"Marker benchmark. See https://github.com/VikParuchuri/marker\"\n",
+    "           , \"default_metric\" : \"ocr_v1\"\n",
+    "           , \"df\": \"{}\"}\n",
     "\n",
-    "response = requests.post(f\"{EVALAP_API_URL}/dataset\", json=dataset, headers=evalap_headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset', json=dataset, headers=evalap_headers)\n",
     "dataset = response.json()\n",
     "dataset"
    ]
@@ -789,7 +786,7 @@
    ],
    "source": [
     "# Function to stream data in chunks\n",
-    "def stream_data(buffer, chunk_size=1024 * 1024):\n",
+    "def stream_data(buffer, chunk_size=1024*1024):\n",
     "    buffer.seek(0)\n",
     "    while True:\n",
     "        chunk = buffer.read(chunk_size)\n",
@@ -802,15 +799,11 @@
     "buffer = io.BytesIO()\n",
     "\n",
     "# Write directly to parquet without converting to pandas first\n",
-    "ds[\"train\"].to_parquet(buffer, compression=\"gzip\")\n",
+    "ds['train'].to_parquet(buffer, compression=\"gzip\")\n",
     "\n",
     "# Upload the data using a streaming POST request\n",
-    "headers = {\"Content-Type\": \"application/octet-stream\"} | evalap_headers\n",
-    "response = requests.post(\n",
-    "    f\"{EVALAP_API_URL}/dataset/{dataset['id']}/upload_parquet\",\n",
-    "    data=stream_data(buffer, chunk_size=262144),\n",
-    "    headers=headers,\n",
-    ")\n",
+    "headers = {'Content-Type': 'application/octet-stream'} | evalap_headers\n",
+    "response = requests.post(f'{EVALAP_API_URL}/dataset/{dataset[\"id\"]}/upload_parquet', data=stream_data(buffer, chunk_size=262144), headers=headers)\n",
     "\n",
     "# Check the response\n",
     "if response.ok:\n",
@@ -847,9 +840,7 @@
     "}\n",
     "\n",
     "# Make the PATCH request\n",
-    "response = requests.patch(\n",
-    "    f\"{EVALAP_API_URL}/dataset/{dataset['id']}\", headers=evalap_headers, data=json.dumps(data)\n",
-    ")\n",
+    "response = requests.patch(f'{EVALAP_API_URL}/dataset/{dataset[\"id\"]}', headers=evalap_headers, data=json.dumps(data))\n",
     "\n",
     "# Print the response\n",
     "print(response.status_code)\n",
