--- a/notebooks/run_set_raglimit_demo.ipynb
+++ b/notebooks/run_set_raglimit_demo.ipynb
@@ -33,18 +33,21 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "import time\n",
     "\n",
     "import dotenv\n",
+    "from IPython.display import HTML\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
+    "from evalap.utils import log_and_raise_for_status\n",
     "\n",
-    "# EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
     "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
-    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\")\n",
+    "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.etalab.gouv.fr/api/v1\"\n",
@@ -62,28 +65,25 @@
     "# Various utility functions\n",
     "# --\n",
     "def format_metrics(row):\n",
-    "    # format a dataframe has a series of \"mean ± std\"\n",
-    "    metrics = {}\n",
-    "    for metric in final_df.columns.levels[0]:\n",
-    "        mean_value = row[(metric, \"mean\")]\n",
-    "        std_value = row[(metric, \"std\")]\n",
-    "        metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
-    "    return pd.Series(metrics)\n",
-    "\n",
-    "\n",
+    "   # format a dataframe has a series of \"mean ± std\"\n",
+    "   metrics = {}\n",
+    "   for metric in final_df.columns.levels[0]:\n",
+    "       mean_value = row[(metric, 'mean')]\n",
+    "       std_value = row[(metric, 'std')]\n",
+    "       metrics[metric] = f\"{mean_value:.2f} ± {std_value:.2f}\"\n",
+    "   return pd.Series(metrics)\n",
+    "    \n",
     "def highlight_cells(s):\n",
-    "    # Custom function to highlight the entry with the highest/lowest mean value\n",
-    "    means = s.apply(lambda x: float(str(x).split(\"±\")[0].strip()))\n",
+    " # Custom function to highlight the entry with the highest/lowest mean value\n",
+    "    means = s.apply(lambda x: float(str(x).split('±')[0].strip()))\n",
     "    # Create a mask where 1 for max, 0 for min\n",
     "    max_mean_index = means.idxmax()\n",
-    "    min_mean_index = means.idxmin()\n",
+    "    min_mean_index = means.idxmin()  \n",
     "    mask = pd.Series({max_mean_index: 1, min_mean_index: 0}, index=s.index)\n",
     "    return [\n",
-    "        \"font-weight: bold; color: salmon\"\n",
-    "        if mask_value == 0\n",
-    "        else \"font-weight: bold; color: green\"\n",
-    "        if mask_value == 1\n",
-    "        else \"\"\n",
+    "        'font-weight: bold; color: salmon' if mask_value == 0 else\n",
+    "        'font-weight: bold; color: green' if mask_value == 1 else\n",
+    "        ''\n",
     "        for mask_value in mask\n",
     "    ]"
    ]
@@ -117,31 +117,26 @@
     "expset_readme = \"Comparing the impact of the `limit` parameters on a RAG model.\"\n",
     "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
-    "    \"dataset\": \"MFS_questions_v01\",\n",
-    "    \"model\": {\n",
-    "        \"name\": \"meta-llama/Llama-3.1-8B-Instruct\",\n",
-    "        \"sampling_params\": {\"temperature\": 0.2},\n",
-    "        \"base_url\": MFS_API_URL,\n",
-    "        \"api_key\": MFS_API_KEY,\n",
-    "    },\n",
-    "    \"metrics\": metrics,\n",
-    "    \"judge_model\": \"gpt-4o-mini\",  # the default is not given\n",
+    "    \"dataset\" : \"MFS_questions_v01\",\n",
+    "    \"model\" : {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
+    "    \"metrics\" : metrics,\n",
+    "    \"judge_model\": \"gpt-4o-mini\", # the default is not given\n",
     "}\n",
     "grid_params = {\n",
-    "    \"model\": [{\"extra_params\": {\"rag\": {\"mode\": \"rag\", \"limit\": i}}} for i in [1, 2, 3, 4, 5, 7, 10, 15, 20]],\n",
+    "    \"model\": [{\"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":i}}} for i in [1, 2, 3, 4, 5, 7, 10, 15, 20]],\n",
     "}\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
-    "    \"name\": expset_name,\n",
+    "    \"name\" : expset_name, \n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params},\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params}\n",
     "}\n",
-    "response = requests.post(f\"{EVALAP_API_URL}/experiment_set\", json=expset, headers=headers)\n",
+    "response = requests.post(f'{EVALAP_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f\"Created expset: {resp['name']} ({resp['id']})\")\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
@@ -280,47 +275,47 @@
    "source": [
     "# Read results\n",
     "# --\n",
-    "df_all = None  # multi-dimensional DataFrame\n",
-    "arr_all = {}  # keep references of source array per metric metrics\n",
+    "df_all = None # multi-dimensional DataFrame\n",
+    "arr_all = {} # keep references of source array per metric metrics \n",
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
-    "response = requests.get(f\"{EVALAP_API_URL}/experiment_set/{expset_id}\", headers=headers)\n",
+    "response = requests.get(f'{EVALAP_API_URL}/experiment_set/{expset_id}', headers=headers)\n",
     "expset = response.json()\n",
     "rows = []\n",
     "for i, exp in enumerate(expset[\"experiments\"]):\n",
     "    # Get an experiment result\n",
     "    exp_id = exp[\"id\"]\n",
-    "    response = requests.get(f\"{EVALAP_API_URL}/experiment/{exp_id}?with_results=true\", headers=headers)\n",
+    "    response = requests.get(f'{EVALAP_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
     "        print(f\"Warning: experiment {exp_id} is not finished yet...\")\n",
     "    results = experiment[\"results\"]\n",
     "    model = experiment[\"model\"][\"name\"] + \"_limit\" + str(experiment[\"model\"][\"extra_params\"][\"rag\"][\"limit\"])\n",
-    "\n",
+    "    \n",
     "    # Add an observation row from the observation_table (mean, std etc)\n",
     "    row = {\"model\": model}\n",
     "    rows.append(row)\n",
     "    metric_arrs = {}\n",
     "    arr_all[model] = metric_arrs\n",
-    "    for metric_results in results:\n",
+    "    for metric_results in results: \n",
     "        metric = metric_results[\"metric_name\"]\n",
     "        arr = np.array([x[\"score\"] for x in metric_results[\"observation_table\"] if pd.notna(x[\"score\"])])\n",
-    "        row[(metric, \"mean\")] = np.mean(arr)\n",
-    "        row[(metric, \"std\")] = np.std(arr)\n",
-    "        row[(metric, \"median\")] = np.median(arr)\n",
-    "        row[(metric, \"mean_std\")] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n",
-    "        row[(metric, \"support\")] = len(arr)\n",
+    "        row[(metric, 'mean')] = np.mean(arr)\n",
+    "        row[(metric, 'std')] = np.std(arr)\n",
+    "        row[(metric, 'median')] = np.median(arr)\n",
+    "        row[(metric, 'mean_std')] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n",
+    "        row[(metric, 'support')] = len(arr)\n",
     "        metric_arrs[metric] = arr\n",
-    "\n",
+    "    \n",
     "df_all = pd.DataFrame(rows)\n",
-    "df_all.set_index(\"model\", inplace=True)\n",
+    "df_all.set_index('model', inplace=True)\n",
     "df_all.columns = pd.MultiIndex.from_tuples(df_all.columns)\n",
-    "final_df = df_all.xs(\"mean\", axis=1, level=1)  # pick the \"macro\" metric to show (mean, std, support etc)\n",
+    "final_df = df_all.xs('mean', axis=1, level=1) # pick the \"macro\" metric to show (mean, std, support etc)\n",
     "\n",
-    "final_df = final_df.sort_values(by=\"judge_exactness\", ascending=False)\n",
-    "final_df = final_df[metrics]  # reorder columns\n",
+    "final_df = final_df.sort_values(by='judge_exactness', ascending=False)\n",
+    "final_df = final_df[metrics] # reorder columns\n",
     "final_df = final_df.style.apply(highlight_cells, axis=0)\n",
     "final_df"
    ]
