skip CI: minor notebook Update

--- a/notebooks/run_albert_evals.ipynb
+++ b/notebooks/run_albert_evals.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "8d21aefc-de8b-4436-af6f-4bc6323807a0",
    "metadata": {},
    "outputs": [
@@ -124,8 +124,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Patched expset: Albert (MFS_questions_v01) v1-10-25 (73)\n",
-      "Patched expset: Albert (Assistant IA - QA) v1-10-25 (74)\n"
+      "Patched expset: Albert (MFS_questions_v01) v1-10-25 <3 (73)\n",
+      "Patched expset: Albert (Assistant IA - QA) v1-10-25 <3 (74)\n"
      ]
     }
    ],
@@ -144,9 +144,9 @@
     "    }\n",
     "    grid_params = {\n",
     "        \"model\": [\n",
-    "            #{\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "            #{\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "            {\"name\":\"gpt-5\", \"base_url\":\"https://api.openai.com/v1\", \"api_key\":os.getenv(\"OPENAI_API_KEY\")}\n",
+    "            #{\"name\":\"gpt-5\", \"base_url\":\"https://api.openai.com/v1\", \"api_key\":os.getenv(\"OPENAI_API_KEY\")}\n",
+    "            {\"name\": \"mistralai/Magistral-Small-2506\", \"base_url\": \"http://51.15.199.237/v1\", \"api_key\": \"changeme\"},\n",
+    "\n",
     "        ],\n",
     "    }\n",
     "    \n",
