--- a/notebooks/RAG-hybrid.ipynb
+++ b/notebooks/RAG-hybrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
    "metadata": {},
    "outputs": [
@@ -43,16 +43,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: albert-api-rag-mfs-v2 (68)\n"
+      "Created expset: albert-api-rag-mfs-v4 (19)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"albert-api-rag-mfs-v2\"\n",
+    "expset_name = \"albert-api-rag-mfs-v4\"\n",
     "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
-    "metrics = [\"judge_precision\", \"output_length\", \"generation_time\"]\n",
+    "metrics = [\"judge_precision\", \"contextual_relevancy\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
@@ -63,27 +63,21 @@
     "    \"model\": [\n",
     "        {\n",
     "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-semantic-qdrant\",\n",
+    "            \"aliased_name\": \"albert-large-semantic-elastic\",\n",
     "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
     "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
-    "            \"aliased_name\": \"albert-large-semantic-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [20,21], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
     "            \"aliased_name\": \"albert-large-lexical-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [20,21], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [784,785], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.1-24B-Instruct-2503\", \n",
+    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
     "            \"aliased_name\": \"albert-large-hybrid-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [20,21], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL_DEV, \"api_key\": ALBERT_API_KEY_DEV\n",
+    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":10}},\n",
+    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
     "        },\n",
     "    ],\n",
     "}\n",
@@ -94,7 +88,7 @@
     "expset = {\n",
     "    \"name\" : expset_name, \n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":5}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":1}\n",
     "}\n",
     "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
