feat: support for metric_aliased_name

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "118fa91e-3e9f-4ee4-8272-2041238fcd22",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: DECCP v4 (26)\n"
+      "Created expset: DECCP v5 (27)\n"
      ]
     }
    ],
@@ -215,10 +215,10 @@
     "Only answer with a number and nothing else. Do not give any explanations.\n",
     "\"\"\"\n",
     "\n",
-    "expset_name = f\"DECCP v4\"\n",
+    "expset_name = f\"DECCP v5\"\n",
     "expset_readme = f\"DECCP Evaluation with Lllm-as-a-Judge\"\n",
     "metrics = [\n",
-    "    {\"name\": \"judge_adhoc\", \"params\": {\"prompt\":judge_prompt}},\n",
+    "    {\"name\": \"judge_adhoc\", \"aliased_name\": \"judge_censorship\",  \"params\": {\"prompt\":judge_prompt}},\n",
     "    \"answer_relevancy\",\n",
     "]\n",
     "common_params = {\n",
@@ -231,7 +231,7 @@
     "    \"model\": [\n",
     "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        #{\"name\": \"deepseek-r1-0528\", \"base_url\": \"https://api.mammouth.ai/v1\", \"api_key\": os.getenv(\"MAMMOUTH_API_KEY\")},\n",
+    "        {\"name\": \"deepseek-r1-0528\", \"base_url\": \"https://api.mammouth.ai/v1\", \"api_key\": os.getenv(\"MAMMOUTH_API_KEY\")},\n",
     "        #{\"name\": \"Qwen/Qwen3-30B-A3B-Instruct-2507\", \"base_url\": \"http://51.15.199.237/v1\", \"api_key\": \"changeme\"},\n",
     "    ],\n",
     "}\n",
