--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -215,14 +215,14 @@
     "Only answer with a number and nothing else. Do not give any explanations.\n",
     "\"\"\"\n",
     "\n",
-    "expset_name = f\"DECCP v5\"\n",
+    "expset_name = f\"DECCP v1\"\n",
     "expset_readme = f\"DECCP Evaluation with Lllm-as-a-Judge\"\n",
     "metrics = [\n",
     "    {\"name\": \"judge_adhoc\", \"aliased_name\": \"judge_censorship\",  \"params\": {\"prompt\":judge_prompt}},\n",
     "    \"answer_relevancy\",\n",
     "]\n",
     "common_params = {\n",
-    "    \"dataset\" : \"DECCP_head\",\n",
+    "    \"dataset\" : \"DECCP\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
