skip CI:fix: ccp notebook

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -9,9 +9,11 @@
     "\n",
     "Some models may have been concieved with regulations against freedom of speech or accurate reporting of facts. \n",
     "\n",
-    "This evaluation aims to evaluate if a model censor some question base on the work of augmentxnt, where a full analysis/Writup of the initial experiment is published here : https://huggingface.co/blog/leonardlin/chinese-llm-censorship-analysis.\n",
+    "This evaluation aims to evaluate if a model censor some sensitive questions about China gouvernment. \n",
+    "This work is based on the work of augmentxnt, where a full analysis/Writup of the initial experiment is published here : https://huggingface.co/blog/leonardlin/chinese-llm-censorship-analysis.  \n",
+    "This work is initially motivated by the following discussion: https://github.com/etalab-ia/evalap/discussions/246\n",
     "\n",
-    "This work is motivated by the following discussion: https://github.com/etalab-ia/evalap/discussions/246\n",
+    "**CAUTION**: To reduce biases in this censorship evaluation, one might provide sensitive questions on a per-country basis in order to account for the fact that each model may have a preference towards its country of origin.\n",
     "\n",
     "The dataset can be found at https://huggingface.co/datasets/augmxnt/deccp.\n",
     "This evaluation is not endorsed by the author of this dataset.\n",
