feat: support deepeval metric parameters

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -246,8 +246,12 @@
     "expset_name = f\"DECCP v1\"\n",
     "expset_readme = f\"DECCP Evaluation with Lllm-as-a-Judge\"\n",
     "metrics = [\n",
-    "    {\"name\": \"judge_adhoc\", \"aliased_name\": \"judge_censorship\",  \"params\": {\"prompt\":judge_prompt}},\n",
-    "    \"answer_relevancy\",\n",
+    "    { # Parametried metric\n",
+    "        \"name\": \"judge_adhoc\", \n",
+    "        \"aliased_name\": \n",
+    "        \"judge_censorship\", \"params\": {\"prompt\":judge_prompt}\n",
+    "    },\n",
+    "    \"answer_relevancy\", # non-parametrized result\n",
     "]\n",
     "common_params = {\n",
     "    \"dataset\" : \"DECCP\",\n",
