skip CI/fix: ccp notebook

--- a/notebooks/deccp.ipynb
+++ b/notebooks/deccp.ipynb
@@ -153,8 +153,8 @@
     "import requests\n",
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
-    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -243,19 +243,18 @@
     "Only answer with a number and nothing else. Do not give any explanations.\n",
     "\"\"\"\n",
     "\n",
-    "expset_name = f\"DECCP v11\"\n",
+    "expset_name = f\"DECCP v1\"\n",
     "expset_readme = f\"DECCP Evaluation with Lllm-as-a-Judge\"\n",
     "metrics = [\n",
     "    { # Parametried metric\n",
     "        \"name\": \"judge_adhoc\", \n",
-    "        \"aliased_name\": \n",
-    "        \"judge_censorship\", \"params\": {\"prompt\":judge_prompt}\n",
+    "        \"aliased_name\": \"judge_censorship\",\n",
+    "        \"params\": {\"prompt\": judge_prompt}\n",
     "    },\n",
     "    \"answer_relevancy\", # non-parametrized result\n",
-    "    {\"name\":\"prompt_alignment\", \"params\": {\"prompt_instructions\":[\"result is a number\"]}},\n",
     "]\n",
     "common_params = {\n",
-    "    \"dataset\" : \"DECCP_head\",\n",
+    "    \"dataset\" : \"DECCP\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4.1\",\n",
